# Financial-Analytics

./: .dockerignore  .gitignore  Dockerfile2Complicated  docker-compose.yml  set_local_env.sh
api/: Dockerfile  main.py  pyproject.toml  test_stock.py
api/app/: main.py
api/custom_logger/: __init__.py  custom_logger.py
api/finance_api_client/: __init__.py  api_parser.py  senate_trading.py  stock_api_utils.py  stocks_api_base.py  stocks_api_base_v1.py
api/finance_api_client/models/: current_price_model.py  current_price_model_v1.py
api/logger/: __init__.py  custom_logger.py
postgres-db/: Dockerfile  init-db.sh
scripts/: pass_gen.py
