[tool.poetry]
name = "financial_analytics"
version = "0.1.0"
description = "Project for financial analytics."
authors = ["Mu'tasim <mmuhib136@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.37"
aiohttp = "^3.8.1"
requests = "^2.28.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"
numpy = "^1.23.0"
pandas = "^1.4.3"
datamodel-code-generator = "^0.13.2"

[tool.poetry.dev-dependencies]
yfinance = "^0.1.77"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
